--- a/src/container/signup/index.hbs
+++ b/src/container/signup/index.hbs
@@ -14,9 +14,15 @@
             </div>
 
             <div class="form__item">
-                {{> field-password name='password' label='Пароль' type='text'
+                {{> field-password action='signupForm.change' name='password' label='Пароль' type='text'
                 placeholder='Введіть пароль'}}
                 <span name="password" class="form__error">Помилка</span>
+            </div>
+
+            <div class="form__item">
+                {{> field-password action='signupForm.change' name='passwordAgain' label='Пароль ще раз' type='text'
+                placeholder='Введіть пароль'}}
+                <span name="passwordAgain" class="form__error">Помилка</span>
             </div>
 
             <div class="form__item">
@@ -33,8 +39,8 @@
 
         </div>
 
-        <button onclick="signupForm.submit();" class="button" type="button">Зареєструватися</button>
+        <button onclick="signupForm.submit();" class="button button--disabled" type="button">Зареєструватися</button>
 
-        <span class="alert alert--error">Увага, помилка!</span>
+        <span class="alert alert--disabled">Увага, помилка!</span>
     </form>
 </div>
