--- a/src/component/field/index.scss
+++ b/src/component/field/index.scss
@@ -34,8 +34,8 @@
       border-color: s.color(main);
     }
 
-    &--error {
-      border-color: s.color(red) !important;
-    }
+    // &--error {
+    //   border-color: s.color(red) !important;
+    // }
   }
 }
