--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -12,12 +12,13 @@
   }
 
   &__error {
-    color: s.color('red');
+    color: s.color(red);
     font-size: 12px;
     display: none;
 
     &--active {
       display: block;
+      // color: blueviolet;
     }
   }
 }
@@ -32,6 +33,17 @@
 
   &:active {
     opacity: 0.3;
+  }
+
+  &--disabled {
+    opacity: 0.3;
+    cursor: default;
+
+    &:hover,
+    &:active {
+      opacity: 0.5;
+      cursor: default;
+    }
   }
 }
 
@@ -54,5 +66,15 @@
   &--progress {
     border-color: s.color(blue);
     color: s.color(blue);
+  }
+
+  &--disabled {
+    display: none;
+  }
+}
+
+.validation {
+  &--active {
+    border-color: s.color(red) !important;
   }
 }
