--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -87,6 +87,19 @@
 
 .link__prefix {
   color: s.color(light);
-
   font-size: 12px;
+}
+
+.skeleton {
+  animation: skeleton-animation 1s infinite alternate;
+}
+
+@keyframes skeleton-animation {
+  from {
+    background-color: rgba(0, 0, 0, 0.05);
+  }
+
+  to {
+    background-color: rgba(0, 0, 0, 0.15);
+  }
 }
